[tool.poetry]
name = "dynamodb-toolbox-py"
version = "0.1.0"
description = ""
authors = ["Juan Cruz Martinez <bajcmartinez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aioboto3 = "^9.4.0"
moto = {extras = ["server"], version = "^3.1.3"}

[tool.poetry.dev-dependencies]
moto = {extras = ["dynamodb"], version = "^3.1.3"}
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
